--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ name: default
 
 steps:
 - name: datree-policy-check  
-  image: datree/drone-datree
+  image: datree/datree
   settings:
     token:
       from_secret: datree_token
