--- a/.drone.yml
+++ b/.drone.yml
@@ -1,16 +1,17 @@
 kind: pipeline
+type: exec
 name: default
 
 steps:
 - name: datree-policy-check  
-  image: datree/datree
   settings:
     token:
       from_secret: datree_token
     path:
     cliArguments: -s 1.24.0
     isHelmChart: false
-    helmArguments: 
+  commands:
+  - ls -l 
   when:
     event:
     - push
