--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,18 @@
 kind: pipeline
-type: exec
+type: docker
 name: default
 
 steps:
 - name: datree-policy-check  
-  commands:
-  - ls -l 
+  image: datree/datree
+  settings:
+    token:
+      from_secret: datree_token
+    path:
+    cliArguments: -s 1.24.0
+    isHelmChart: false
+
+  when:
+    event:
+    - push
+    - pull_request
