--- a/.drone.yml
+++ b/.drone.yml
@@ -12,7 +12,7 @@ steps:
   settings:
     token:
       from_secret: datree_token
-    path:
+    path: exampleFile.yaml
     cliArguments: -s 1.24.0
     isHelmChart: false
 
