--- a/.drone.yml
+++ b/.drone.yml
@@ -15,6 +15,9 @@ steps:
     path: exampleFile.yaml
     cliArguments: -s 1.24.0
     isHelmChart: false
+    helmArguments:
+    isKustomization: false
+    kustomizeArguments:
 
   when:
     event:
