--- a/.drone.yml
+++ b/.drone.yml
@@ -12,7 +12,7 @@ steps:
   settings:
     token:
       from_secret: datree_token
-    path: ./kustomize
+    path: kustomize
     cliArguments: -s 1.23.0
     isHelmChart: false
     helmArguments:
