--- a/.drone.yml
+++ b/.drone.yml
@@ -12,11 +12,11 @@ steps:
   settings:
     token:
       from_secret: datree_token
-    path: chart
+    path: kustomize
     cliArguments: -s 1.23.0
-    isHelmChart: true
+    isHelmChart: false
     helmArguments:
-    isKustomization: false
+    isKustomization: true
     kustomizeArguments:
 
   when:
