--- a/.drone.yml
+++ b/.drone.yml
@@ -12,9 +12,9 @@ steps:
   settings:
     token:
       from_secret: datree_token
-    path: "exampleFile.yaml"
+    path: "chart"
     cliArguments: -s 1.22.0
-    isHelmChart: false
+    isHelmChart: true
     helmArguments:
     isKustomization: false
     kustomizeArguments:
