--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ platform:
 
 steps:
 - name: datree-policy-check  
-  image: hadarco/test
+  image: datree/drone-datree
   settings:
     token:
       from_secret: datree_token
