--- a/.drone.yml
+++ b/.drone.yml
@@ -13,6 +13,7 @@ steps:
     token:
       from_secret: datree_token
     path: "exampleFile.yaml"
+    cliArguments: "-s 1.22.0"
 
   when:
     event:
