--- a/.github/workflows/tst.yaml
+++ b/.github/workflows/tst.yaml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: datree
-        uses: datreeio/action-datree@main
+        uses: hadar-co/action-datree@main
         with:
           path: 'argoapp.yaml'
           cliArguments: '--schema-location "https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/argoproj.io/{{ .ResourceKind }}_{{ .ResourceAPIVersion }}.json"'
