--- a/.github/workflows/tst.yaml
+++ b/.github/workflows/tst.yaml
@@ -18,5 +18,5 @@ jobs:
         uses: hadar-co/action-datree@main
         with:
           path: 'argoapp.yaml'
-          cliArguments: "--schema-location 'https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/argoproj.io/{{ .ResourceKind }}_{{ .ResourceAPIVersion }}.json'"
+          cliArguments: '--schema-location "https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/argoproj.io/{{ .ResourceKind }}_{{ .ResourceAPIVersion }}.json"'
 
