--- a/.github/workflows/tst.yaml
+++ b/.github/workflows/tst.yaml
@@ -19,5 +19,5 @@ jobs:
         with:
           path: 'argoapp.yaml'
           #cliArguments: --schema-location blat blin
-          cliArguments: --schema-location "https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/argoproj.io/{{ .ResourceKind }}_{{ .ResourceAPIVersion }}.json"
+          cliArguments: --schema-location `https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/argoproj.io/{{ .ResourceKind }}_{{ .ResourceAPIVersion }}.json`
 
