--- a/.github/workflows/tst.yaml
+++ b/.github/workflows/tst.yaml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: datree
-        uses: hadar-co/action-datree@main
+        uses: datreeio/action-datree@main
         with:
           path: 'argoapp.yaml'
           #cliArguments: --schema-location blat blin
